@@ -157,6 +157,17 @@ Answer "y" or "n".
 Answer "y" or "n".
 
 
+  "Do you want the Random Page link to avoid returning a locale page?
+  "Do you want the Random Page link to avoid returning a category page?
+
+Answer "y" or "n".  The defaults are "n", which means that Random Page is as
+likely to return a category or locale page as anything else.  If the category
+and locale pages on your Guide are generally just lists of things in that
+category/locale, you probably want to pick "y" here.  If, on the other hand,
+your category/locale pages generally have substantial content of their own,
+you may prefer to choose "n".
+
+
   "Do you want the content to appear above the navbar in the HTML?"
 
 Answer "y" or "n".  The default is "n", for reasons of backwards
